--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "autoprefixer": "10.4.17",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "embla-carousel-react": "^8.1.8",
+    "framer-motion": "^11.3.21",
     "geist": "^1.2.1",
     "lucide-react": "^0.395.0",
     "next": "latest",
@@ -33,6 +35,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.52.0",
+    "recharts": "^2.12.7",
     "tailwind-merge": "^2.3.0",
     "tailwindcss": "3.4.1",
     "tailwindcss-animate": "^1.0.7",
