--- a/package.json
+++ b/package.json
@@ -22,6 +22,12 @@
     "@tanstack/react-query": "^5.45.1",
     "@tanstack/react-query-devtools": "^5.45.1",
     "@tanstack/react-table": "^8.17.3",
+    "@uppy/dashboard": "^4.0.2",
+    "@uppy/drag-drop": "^4.0.1",
+    "@uppy/file-input": "^4.0.0",
+    "@uppy/progress-bar": "^4.0.0",
+    "@uppy/react": "^4.0.1",
+    "@uppy/status-bar": "^4.0.1",
     "autoprefixer": "10.4.17",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
