--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@uppy/progress-bar": "^4.0.0",
     "@uppy/react": "^4.0.1",
     "@uppy/status-bar": "^4.0.1",
+    "@uppy/tus": "^4.0.0",
     "autoprefixer": "10.4.17",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
@@ -42,6 +43,7 @@
     "react-dom": "18.2.0",
     "react-hook-form": "^7.52.0",
     "recharts": "^2.12.7",
+    "sonner": "^1.5.0",
     "tailwind-merge": "^2.3.0",
     "tailwindcss": "3.4.1",
     "tailwindcss-animate": "^1.0.7",
