--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "autoprefixer": "10.4.17",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "date-fns": "^3.6.0",
     "embla-carousel-react": "^8.1.8",
     "framer-motion": "^11.3.21",
     "geist": "^1.2.1",
