--- a/package.json
+++ b/package.json
@@ -39,13 +39,16 @@
     "embla-carousel-react": "^8.1.8",
     "framer-motion": "^11.3.21",
     "geist": "^1.2.1",
+    "leaflet": "^1.9.4",
+    "leaflet-geosearch": "^4.0.0",
     "lucide-react": "^0.395.0",
-    "next": "latest",
+    "next": "^14.2.12",
     "next-themes": "^0.3.0",
     "postcss": "8.4.33",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.52.0",
+    "react-leaflet": "^4.2.1",
     "recharts": "^2.12.7",
     "sonner": "^1.5.0",
     "tailwind-merge": "^2.3.0",
@@ -55,6 +58,7 @@
     "zod": "^3.23.8"
   },
   "devDependencies": {
+    "@types/leaflet": "^1.9.12",
     "@types/node": "20.11.5",
     "@types/react": "18.2.48",
     "@types/react-dom": "18.2.18",
