--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "email": "email dev"
   },
   "dependencies": {
     "@edgestore/react": "^0.2.2",
@@ -27,6 +28,7 @@
     "@radix-ui/react-tabs": "^1.1.0",
     "@radix-ui/react-toast": "^1.2.2",
     "@radix-ui/react-tooltip": "^1.1.2",
+    "@react-email/components": "^0.0.25",
     "@react-pdf/renderer": "^3.4.4",
     "@supabase/ssr": "latest",
     "@supabase/supabase-js": "latest",
@@ -50,9 +52,12 @@
     "react-day-picker": "^8.10.1",
     "react-dom": "18.2.0",
     "react-dropzone": "^14.2.3",
+    "react-email": "3.0.1",
     "react-hook-form": "^7.52.0",
     "react-leaflet": "^4.2.1",
     "recharts": "^2.12.7",
+    "resend": "^4.0.0",
+    "sharp": "^0.33.5",
     "sonner": "^1.5.0",
     "tailwind-merge": "^2.5.2",
     "tailwindcss": "3.4.1",
