--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "react-email": "3.0.1",
     "react-hook-form": "^7.52.0",
     "react-leaflet": "^4.2.1",
+    "react-leaflet-fullscreen": "^4.1.1",
     "recharts": "^2.12.7",
     "resend": "^4.0.0",
     "sharp": "^0.33.5",
